- add new images - setup the configure file

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: My 2021 Christmas with friends
-description: Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a>
+description: “Life is not measured by the number of breaths we take, but by the moments that take our breath away.”- Hillary Cooper
 baseurl: "/Christmas-with-friends-2021" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
